--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 
 body {
     background-color: #012a48;
+    font-family: 'Titillium-Web', sans-serif;
 }
