--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,14 @@ body {
     margin: auto;
     padding: 0px;
 }
+
+@media screen 
+  and (min-width: 951px) 
+  and (max-width: 1170px){
+    .resumeSchool {
+        margin-top: 8px !important;
+    }
+    .resumeWork {
+        margin-top: 4px !important;
+    }
+}
